Ingress-nginx-Updated/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-server
spec:
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
