Ingress-nginx-Updated/ingress-without-annotation.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress-without-annotation
spec:
  ingressClassName: nginx
  rules:
  - host: web-without-annotation.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-server
            port:
              number: 80
